feat(upload): implémentation du pattern décorateur pour le téléversement des images + ex. AWS S3
  - Ajout un exemple du module `avis-cloud` pour gérer le téléversement des fichiers vers AWS S3 avec le décorateur `FilesS3BucketDecorator`.
  - Modification majeure du port `FileUploader` : simplification de la méthode upload en supprimant la dépendance au modèle `Jeu`.
  - Création de décorateurs `FileUploaderWebDecorator` et `FileUploaderSystem` pour téléversement web et local, respectivement.
  - Suppression de l'ancien adaptateur `FileUploaderAdapter` devenu obsolète.
  - Mise à jour du service `JeuService` et de l'implémentation `JeuUseCase` pour utiliser les nouveaux décorateurs.
  - Réorganisation du code et corrections mineures pour améliorer la lisibilité et l'adaptabilité au pattern Clean Architecture.

--- a/avis-web/src/main/resources/templates/jeux.html
+++ b/avis-web/src/main/resources/templates/jeux.html
@@ -27,7 +27,7 @@
     </thead>
     <tbody>
     <tr th:each="jeu, stat:${pageDeJeux.content}">
-        <td><img th:src="@{'/images/' + ${jeu.id} + '.jpg'}" width="80px"></td>
+        <td><img th:src="@{${jeu.image}}" width="80px"></td>
         <td th:text="${jeu.nom}"></td>
         <td th:text="${jeu.genre}"></td>
         <td>
