--- a/avis-web/src/main/resources/templates/entete.html
+++ b/avis-web/src/main/resources/templates/entete.html
@@ -1,13 +1,65 @@
-<table>
-    <tr>
-        <td><a href="editeurs">&Eacute;diteurs</a></td>
-        <td><a href="jeux">Jeux</a></td>
-        <td><a href="classifications">Classifications</a></td>
-        <td><a href="plateformes">Plateformes</a></td>
-        <td><a href="statistiques" target="statistiques">Statistiques</a></td>
-        <td><a href="configuration">Configuration</a></td>
-        <td><a href="/h2-console" target="h2_console">Console H2</a></td>
-        <td><a href="/beans" target="beans">Beans</a></td>
-        <td><a href="/swagger-ui/index.html" target="swagger">Swagger</a></td>
-    </tr>
-</table>
+<nav class="navbar navbar-expand-lg navbar-dark bg-primary mb-4">
+    <div class="container-fluid">
+        <a class="navbar-brand fw-bold" href="/">
+            <i class="fas fa-gamepad me-2"></i>Avis Gaming
+        </a>
+        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarNav">
+            <ul class="navbar-nav me-auto">
+                <li class="nav-item">
+                    <a class="nav-link" href="editeurs">
+                        <i class="fas fa-building me-1"></i>Éditeurs
+                    </a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="jeux">
+                        <i class="fas fa-gamepad me-1"></i>Jeux
+                    </a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="classifications">
+                        <i class="fas fa-tags me-1"></i>Classifications
+                    </a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="plateformes">
+                        <i class="fas fa-laptop me-1"></i>Plateformes
+                    </a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="statistiques" target="statistiques">
+                        <i class="fas fa-chart-bar me-1"></i>Statistiques
+                    </a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="configuration">
+                        <i class="fas fa-cog me-1"></i>Configuration
+                    </a>
+                </li>
+            </ul>
+            <ul class="navbar-nav">
+                <li class="nav-item dropdown">
+                    <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+                        <i class="fas fa-tools me-1"></i>Outils
+                    </a>
+                    <ul class="dropdown-menu">
+                        <li><a class="dropdown-item" href="/h2-console" target="h2_console">
+                            <i class="fas fa-database me-2"></i>Console H2
+                        </a></li>
+                        <li><a class="dropdown-item" href="/beans" target="beans">
+                            <i class="fas fa-cubes me-2"></i>Beans
+                        </a></li>
+                        <li><a class="dropdown-item" href="/swagger-ui/index.html" target="swagger">
+                            <i class="fas fa-code me-2"></i>Swagger
+                        </a></li>
+                    </ul>
+                </li>
+            </ul>
+        </div>
+    </div>
+</nav>
+
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
+<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
